fix footer version mobile + edit min-height all page

--- a/src/layouts/OrderSuccess/orderSuccess.scss
+++ b/src/layouts/OrderSuccess/orderSuccess.scss
@@ -1,6 +1,7 @@
 .l-order-success {
     /* Display & Box Model */
     padding: 8rem 2.5rem 0;
+    min-height: 100vh;
     /* Color */
     color: $--text-default;
     background-color: #fff;
