--- a/src/layouts/Size/size.scss
+++ b/src/layouts/Size/size.scss
@@ -1,6 +1,7 @@
 .l-size {
     /* Display & Box Model */
     padding-top: 6rem;
+    min-height: 100vh;
     /* Color */
     background-color: #fff;
     /* Text */
